<resources>
    <string name="app_name">Guess It</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="get_ready_to">Get ready to</string>
    <string name="guess_the_word">Guess the word!</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="tuna">Tuna</string>
    <string name="the_word_is">The word is ..</string>
    <string name="score_02">Score : 02</string>
    <string name="_0_00">0:00</string>
    <string name="you_scored">You Scored</string>
    <string name="play_again">Play Again</string>
    <string name="_0">0</string>
</resources>