<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scoreConsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.score.ScoreFragment">

        <TextView
            android:id="@+id/scoreTitle_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_scored"
            app:layout_constraintBottom_toTopOf="@+id/result_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/result_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_constraintBottom_toTopOf="@+id/playAgain_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreTitle_textView" />

        <Button
            android:id="@+id/playAgain_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>